--- a/.github/workflows/workflow-1.yml
+++ b/.github/workflows/workflow-1.yml
@@ -12,4 +12,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: step1
-        run: echo "{{ $inputs.input-var }}"
+        run: echo "${{ inputs.input-var }}"
